--- a/src/main/index.html
+++ b/src/main/index.html
@@ -14,7 +14,7 @@
 
 <div id="lipsum">
 
-    <script id="seqrShop" src="/js/seqrShop.js#!invoiceId=123&backURL=foobar"></script>
+    <script id="seqrShop" src="/js/seqrShop.js#!invoiceId=123&layout=standard"></script>
 
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet ante nibh, in ultricies velit
