--- a/src/main/index.html
+++ b/src/main/index.html
@@ -9,12 +9,17 @@
             font-family: Tahoma, Verdana, Arial, sans-serif;
         }
     </style>
+    <script>
+        function paymentDone(data) {
+            alert("Cash is king! "+data);
+        }
+    </script>
 </head>
 <body>
 
 <div id="lipsum">
 
-    <script id="seqrShop" src="/js/seqrShop.js#!invoiceId=1385117438869&layout=standard"></script>
+    <script id="seqrShop" src="/js/seqrShop.js#!invoiceId=1385117438869&layout=standard&successCallback=paymentDone"></script>
 
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet ante nibh, in ultricies velit
