--- a/src/main/index.html
+++ b/src/main/index.html
@@ -19,7 +19,7 @@
 
 <div id="lipsum">
 
-    <script id="seqrShop" src="/js/seqrShop.js#!invoiceId=1385117438869&layout=standard&successCallback=paymentDone"></script>
+    <script id="seqrShop" src="http://extdev4.seqr.se/merchant/webshop/js/seqrShop.js#!invoiceId=1385117438869&layout=standard&successCallback=paymentDone"></script>
 
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet ante nibh, in ultricies velit
