update small template

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -9,19 +9,16 @@
             font-family: Tahoma, Verdana, Arial, sans-serif;
         }
     </style>
-<!--
     <script>
         function paymentDone(data) {
             alert("Cash is king! "+data);
         }
     </script>
--->
 </head>
 <body>
 
 <div id="lipsum">
-<!-- http://extdev4.seqr.se/merchant/webshop -->
-    <script id="seqrShop" src="/js/seqrShop.js#!invoiceId=1385117438869&layout=standard&successCallback=paymentDone"></script>
+    <script id="seqrShop" src="http://extdev4.seqr.se/merchant/webshop/js/seqrShop.js#!invoiceId=1385117438869&layout=standard&successCallback=paymentDone"></script>
 
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet ante nibh, in ultricies velit
