Removed alert. Deleted common.css.

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -11,7 +11,7 @@
     </style>
     <script>
         function paymentDone(data) {
-            alert("Cash is king! "+data);
+            console.log(data);
         }
     </script>
 </head>
